--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
@@ -38,7 +38,7 @@
         </MudTd>
         <MudTd Class="overflow-hider" Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
             <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                <MudText Class="overflow-hider">@context.Name</MudText>
+                <MudText Class="overflow-hider" Style="@(context.Mark ? "text-decoration: underline" : "")">@context.Name</MudText>
                 <MudSpacer />
                 <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
             </MudStack>
