--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverStandings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverStandings.razor
@@ -21,7 +21,7 @@
             </MudTd>
             <MudTd>
                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                    <MudText>@context.Name</MudText>
+                    <MudText Style="@(context.Mark ? "text-decoration: underline" : "")">@context.Name</MudText>
                     <MudSpacer></MudSpacer>
                     <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
                 </MudStack>
