--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -91,6 +91,7 @@
                 Accent = driverTeam?.Accent ?? "var(--mud-palette-primary-text)",
                 Points = driver.Points,
                 HiddenPoints = driver.HiddenPoints,
+                Mark = driver.Driver.Mark,
                 SeasonTeamId = driver.SeasonTeamId,
                 Team = driverTeam?.Team?.Name ?? "None",
 
@@ -111,6 +112,7 @@
                 Accent = team.Accent,
                 Points = team.Points,
                 HiddenPoints = team.HiddenPoints,
+                Mark = team.Team.Mark,
 
                 ResultCells = team.Results?.Select(ToResultCell).ToList() ?? new(),
             };
