--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -48,8 +48,8 @@
 
                                 <MudText Typo="Typo.subtitle1">Toggles</MudText>
                                 <MudDivider />
-                                <MudSwitchM3 @bind-Checked="Model.Alive"
-                                             Label="Alive"
+                                <MudSwitchM3 @bind-Checked="Model.Mark"
+                                             Label="Mark"
                                              Color="Color.Secondary"
                                              ThumbIcon="@Icons.Material.Filled.Done"
                                              ThumbOffIcon="@Icons.Material.Filled.Close" />
