--- a/SimTECH/SimTECH/Pages/Setup/EngineEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/EngineEditor.razor
@@ -5,6 +5,14 @@
     <DialogContent>
         <MudForm Model="@Model">
             <MudTextField T="string" @bind-Value="Model.Name" Label="Name" />
+
+            <MudText Typo="Typo.subtitle1">Toggles</MudText>
+            <MudDivider />
+            <MudSwitchM3 @bind-Checked="Model.Mark"
+                         Label="Mark"
+                         Color="Color.Secondary"
+                         ThumbIcon="@Icons.Material.Filled.Done"
+                         ThumbOffIcon="@Icons.Material.Filled.Close" />
         </MudForm>
     </DialogContent>
     <DialogActions>
