--- a/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
@@ -11,6 +11,14 @@
                             <MudTextField T="string" @bind-Value="@Model.Name" Label="Name" Class="field-md" />
                             <CountrySelect @bind-Value="Model.Country" Class="field-md" />
                             <MudTextField T="string" @bind-Value="@Model.Biography" Label="Biography" Lines="5" />
+
+                            <MudText Typo="Typo.subtitle1">Toggles</MudText>
+                            <MudDivider />
+                            <MudSwitchM3 @bind-Checked="Model.Mark"
+                                         Label="Mark"
+                                         Color="Color.Secondary"
+                                         ThumbIcon="@Icons.Material.Filled.Done"
+                                         ThumbOffIcon="@Icons.Material.Filled.Close" />
                         </MudStack>
                     </MudPaper>
                 </MudItem>
