--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorStandings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorStandings.razor
@@ -19,7 +19,7 @@
             </MudTd>
             <MudTd>
                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                    <MudText>@context.Name</MudText>
+                    <MudText Style="@(context.Mark ? "text-decoration: underline" : "")">@context.Name</MudText>
                     <MudSpacer />
                     <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
                 </MudStack>
