entrant components are incredibly beautified

--- a/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
@@ -101,6 +101,10 @@
 @code {
     [CascadingParameter] public Season Season { get; set; }
 
+    [Parameter] public IEnumerable<SeasonDriver> SeasonDrivers { get; set; } = Enumerable.Empty<SeasonDriver>();
+    [Parameter] public IEnumerable<SeasonTeam> SeasonTeams { get; set; } = Enumerable.Empty<SeasonTeam>();
+    [Parameter] public IEnumerable<SeasonEngine> SeasonEngines { get; set; } = Enumerable.Empty<SeasonEngine>();
+
     List<PowerRankModel> DriverRankings;
 
     protected override async Task OnInitializedAsync()
@@ -109,4 +113,32 @@
     }
 
     private Func<PowerRankModel, string> SimpleCellStyle => power => ViewHelper.SetBorderRightStyle(power.Colour);
+
+    internal class PowerRankListing
+    {
+        public string DriverName { get; set; }
+        public int DriverNumber { get; set; }
+        public Country Nationality { get; set; }
+
+        public string TeamName { get; set; }
+        public string Colour { get; set; } = Constants.DefaultColour;
+        public string Accent { get; set; } = Constants.DefaultAccent;
+
+        public string Engine { get; set; }
+
+        public string Manufacturer { get; set; }
+
+        public int QualyPower { get; set; }
+        public int RacePower { get; set; }
+        public int Aero { get; set; }
+        public int Chassis { get; set; }
+        public int Powertrain { get; set; }
+        public int DriverRel { get; set; }
+        public int CarRel { get; set; }
+        public int EngineRel { get; set; }
+        public int WearMin { get; set; }
+        public int WearMax { get; set; }
+        public int RngMin { get; set; }
+        public int RngMax { get; set; }
+    }
 }
